--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <div
         class="position-absolute top-0 bottom-0 start-0 end-0 d-flex justify-content-center align-items-center"
       >
-        <h1 class="fs-1">Hello</h1>
+        <h1 class="fs-1">BURGER KING</h1>
       </div>
     </div>
 
