--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div class="contaner-fluid fixed-top">
       <div class="row m-0">
         <div class="col-md-5 d-flex align-items-center">
-          <a href="" class="mx-2 text-decoration-none">Home</a>
-          <a href="" class="mx-2 text-decoration-none">About</a>
-          <a href="" class="mx-2 text-decoration-none">Menu</a>
+          <a href="" class="mx-2 text-decoration-none text-white font-weight-bold">Home</a>
+          <a href="" class="mx-2 text-decoration-none text-white font-weight-bold">About</a>
+          <a href="" class="mx-2 text-decoration-none text-white font-weight-bold">Menu</a>
         </div>
         <div class="col-md-2">
           <img
@@ -23,10 +23,10 @@
           />
         </div>
         <div class="col-md-5 d-flex justify-content-end align-items-center">
-          <i class="fa-brands fa-instagram mx-3 text-dark"></i>
-          <i class="fa-brands fa-twitter mx-3 text-dark"></i>
-          <i class="fa-brands fa-facebook mx-3 text-dark"></i>
-          <i class="fa-brands fa-google mx-3 text-dark"></i>
+          <i class="fa-brands fa-instagram mx-3 text-white"></i>
+          <i class="fa-brands fa-twitter mx-3 text-white"></i>
+          <i class="fa-brands fa-facebook mx-3 text-white"></i>
+          <i class="fa-brands fa-google mx-3 text-white"></i>
           <button class="btn btn-outline-warning rounded-pill mx-3">
             +10 367 453 7382
           </button>
@@ -61,21 +61,21 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img
-            src="https://cdn.pixabay.com/photo/2017/03/10/13/49/fast-food-2132863_960_720.jpg"
+            src="https://preview.colorlib.com/theme/burger/img/banner/xbanner.png.pagespeed.ic.lkX74j2tIV.png"
             class="d-block w-100"
             alt="..."
           />
         </div>
         <div class="carousel-item">
           <img
-            src="https://cdn.pixabay.com/photo/2016/03/05/19/37/appetite-1238458_960_720.jpg"
+            src="https://preview.colorlib.com/theme/burger/img/banner/xbanner2.png.pagespeed.ic.vi5LH-JQ8T.jpg"
             class="d-block w-100"
             alt="..."
           />
         </div>
         <div class="carousel-item">
           <img
-            src="https://cdn.pixabay.com/photo/2016/03/05/19/23/appetite-1238387_960_720.jpg"
+            src="https://preview.colorlib.com/theme/burger/img/banner/xbanner.png.pagespeed.ic.lkX74j2tIV.png"
             class="d-block w-100"
             alt="..."
           />
@@ -102,13 +102,13 @@
       <div
         class="position-absolute top-0 bottom-0 start-0 end-0 d-flex justify-content-center align-items-center"
       >
-        <h1 class="fs-1">BURGER KING</h1>
+        <h1 class="fs-1 text-white">BURGER KING</h1>
       </div>
     </div>
 
     <!--  -->
-    <div class="burger-menu">
-        <div class="container my-5">
+    <div class="burger-menu p-5 m-5">
+        <div class="container">
             <div class="row my-4">
                 <div class="col-md-6">
                     <div class="row d-flex align-items-center">
@@ -186,8 +186,48 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="row">
+              <button class="w-100 py-4 my-5 btn btn-outline-danger rounded-pill">More Items</button>
             </div>
         </div>
+    </div>
+
+    <div class="row items m-0 text-white my-5">
+      <div class="col-md-6 item1 d-flex flex-column justify-content-center align-items-start px-5">
+        <h1 class="text-danger">$20</h1>
+        <h3 class="text-white">The Burger President</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, libero.</p>
+        <button class="badge bg-warning rounded-pill border-0 py-3 px-5">Order Now</button>
+      </div>
+      <div class="col-md-6 item2 d-flex flex-column justify-content-center align-items-start px-5">
+        <h1 class="text-danger">$20</h1>
+        <h3 class="text-white">The Burger President</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, libero.</p>
+        <button class="badge bg-warning rounded-pill border-0 py-3 px-5">Order Now</button>
+      </div>
+    </div>
+
+    <div class="container my-5 py-5">
+      <div class="row">
+        <div class="col-md-6 p-3">
+          <img src="https://preview.colorlib.com/theme/burger/img/about/x1.png.pagespeed.ic.Ow3mxmlpZe.webp" alt="" class="w-100">
+        </div>
+        <div class="col-md-6 d-flex flex-column justify-content-center align-items-start p-5">
+          <h1 class="text-warning mb-4">About Us</h1>
+          <h1>BEST BURGER IN YOUR CITY</h1>
+          <p class="text-justify mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iure aliquid molestiae? Quaerat, aut laudantium odio voluptatibus dolorem quis quod placeat esse est ut. Minus ex pariatur deleniti odio facere aperiam est voluptate placeat aut quis sed hic temporibus ut nisi consequatur nulla nihil dolor magnam saepe sequi amet, dolorem impedit inventore? Quos ab, delectus atque a laborum sequi soluta facere expedita libero! Voluptas totam laudantium tempora velit, facilis quae provident vel exercitationem dolores voluptates sint rem, at sequi sed dolore temporibus obcaecati. Voluptas suscipit error laudantium, debitis explicabo at sequi reprehenderit quam! Consectetur, illo perferendis aliquid cumque molestias molestiae vel harum vero odit perspiciatis consequatur repellendus soluta, voluptates repudiandae aperiam corrupti quisquam dicta ad corporis at commodi quae aliquam.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="row m-0 video">
+      <div class="col-md-12 d-flex flex-column justify-content-center align-items-center">
+        <h1 class="text-white font">BURGER</h1>
+        <h1 class="text-white font">BACHELOR</h1>
+        <h3 class="text-white">How we make delicious Burger</h3>
+        <i class="fa-brands fa-circle-play mx-3 text-white font my-5"></i>
+      </div>
     </div>
 
     <script
