--- a/index.html
+++ b/index.html
@@ -7,14 +7,44 @@
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./bootstrap.min.css" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Paytone+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;600;800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="contaner-fluid fixed-top">
-      <div class="row m-0">
+      <div class="row nav_items m-0">
         <div class="col-md-5 d-flex align-items-center">
-          <a href="" class="mx-2 text-decoration-none text-white font-weight-bold">Home</a>
-          <a href="" class="mx-2 text-decoration-none text-white font-weight-bold">About</a>
-          <a href="" class="mx-2 text-decoration-none text-white font-weight-bold">Menu</a>
+          <a
+            href=""
+            class="mx-2 text-decoration-none text-white font-weight-bold"
+            >Home</a
+          >
+          <a
+            href=""
+            class="mx-2 text-decoration-none text-white font-weight-bold"
+            >Menu</a
+          >
+          <a
+            href=""
+            class="mx-2 text-decoration-none text-white font-weight-bold"
+            >About</a
+          >
+          <a
+            href=""
+            class="mx-2 text-decoration-none text-white font-weight-bold"
+            >Contact</a
+          >
         </div>
         <div class="col-md-2">
           <img
@@ -35,7 +65,11 @@
     </div>
 
     <!-- Hero Section -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+    <div
+      id="carouselExampleIndicators"
+      class="carousel slide"
+      data-bs-ride="true"
+    >
       <div class="carousel-indicators">
         <button
           type="button"
@@ -102,142 +136,233 @@
       <div
         class="position-absolute top-0 bottom-0 start-0 end-0 d-flex justify-content-center align-items-center"
       >
-        <h1 class="fs-1 text-white">BURGER KING</h1>
+        <h1 class="heading_font text-white">BURGER KING</h1>
       </div>
     </div>
 
     <!--  -->
-    <div class="burger-menu p-5 m-5">
-        <div class="container">
-            <div class="row my-4">
-                <div class="col-md-6">
-                    <div class="row d-flex align-items-center">
-                        <div class="col-md-4">
-                            <img src="https://cdn.pixabay.com/photo/2016/03/05/19/23/appetite-1238387_960_720.jpg" alt="" class="menu-img">
-                        </div>
-                        <div class="col-md-8">
-                            <h1>Beefy Burgers</h1>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <h1><span class="text-denger">$5</span></h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="row d-flex align-items-center">
-                        <div class="col-md-4">
-                            <img src="https://cdn.pixabay.com/photo/2016/03/05/19/23/appetite-1238387_960_720.jpg" alt="" class="menu-img">
-                        </div>
-                        <div class="col-md-8">
-                            <h1>Beefy Burgers</h1>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <h1><span class="text-denger">$5</span></h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row my-4">
-                <div class="col-md-6">
-                    <div class="row d-flex align-items-center">
-                        <div class="col-md-4">
-                            <img src="https://cdn.pixabay.com/photo/2016/03/05/19/23/appetite-1238387_960_720.jpg" alt="" class="menu-img">
-                        </div>
-                        <div class="col-md-8">
-                            <h1>Beefy Burgers</h1>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <h1><span class="text-denger">$5</span></h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="row d-flex align-items-center">
-                        <div class="col-md-4">
-                            <img src="https://cdn.pixabay.com/photo/2016/03/05/19/23/appetite-1238387_960_720.jpg" alt="" class="menu-img">
-                        </div>
-                        <div class="col-md-8">
-                            <h1>Beefy Burgers</h1>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <h1><span class="text-denger">$5</span></h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row my-4">
-                <div class="col-md-6">
-                    <div class="row d-flex align-items-center">
-                        <div class="col-md-4">
-                            <img src="https://cdn.pixabay.com/photo/2016/03/05/19/23/appetite-1238387_960_720.jpg" alt="" class="menu-img">
-                        </div>
-                        <div class="col-md-8">
-                            <h1>Beefy Burgers</h1>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <h1><span class="text-denger">$5</span></h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="row d-flex align-items-center">
-                        <div class="col-md-4">
-                            <img src="https://cdn.pixabay.com/photo/2016/03/05/19/23/appetite-1238387_960_720.jpg" alt="" class="menu-img">
-                        </div>
-                        <div class="col-md-8">
-                            <h1>Beefy Burgers</h1>
-                            <p>Great way to make your business appear trust and relevant.</p>
-                            <h1><span class="text-denger">$5</span></h1>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-              <button class="w-100 py-4 my-5 btn btn-outline-danger rounded-pill">More Items</button>
-            </div>
+    <div class="burger_menu p-5 m-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12 d-flex flex-column align-items-center py-4">
+            <h4 class="top_heading">Burger Menu</h4>
+            <h1 class="b_heading">BEST EVER BURGERS</h1>
+          </div>
         </div>
+        <div class="row menu_items my-4 py-3">
+          <div class="col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col-md-4">
+                <img
+                  src="https://preview.colorlib.com/theme/burger/img/burger/x1.png.pagespeed.ic.jiHTGZ7HlR.webp"
+                  alt=""
+                  class="menu-img"
+                />
+              </div>
+              <div class="col-md-8">
+                <h1>Beefy Burgers</h1>
+                <p>
+                  Great way to make your business appear trust and relevant.
+                </p>
+                <h1><span class="text-denger">$5</span></h1>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col-md-4">
+                <img
+                  src="https://preview.colorlib.com/theme/burger/img/burger/x2.png.pagespeed.ic.aVvtCHST1a.webp"
+                  alt=""
+                  class="menu-img"
+                />
+              </div>
+              <div class="col-md-8">
+                <h1>Beefy Burgers</h1>
+                <p>
+                  Great way to make your business appear trust and relevant.
+                </p>
+                <h1><span class="text-denger">$5</span></h1>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row menu_items my-4 py-3">
+          <div class="col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col-md-4">
+                <img
+                  src="https://preview.colorlib.com/theme/burger/img/burger/x3.png.pagespeed.ic.FrDg6q389k.webp"
+                  alt=""
+                  class="menu-img"
+                />
+              </div>
+              <div class="col-md-8">
+                <h1>Beefy Burgers</h1>
+                <p>
+                  Great way to make your business appear trust and relevant.
+                </p>
+                <h1><span class="text-denger">$5</span></h1>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col-md-4">
+                <img
+                  src="https://preview.colorlib.com/theme/burger/img/burger/x4.png.pagespeed.ic.Qd7cXP_ZoP.webp"
+                  alt=""
+                  class="menu-img"
+                />
+              </div>
+              <div class="col-md-8">
+                <h1>Beefy Burgers</h1>
+                <p>
+                  Great way to make your business appear trust and relevant.
+                </p>
+                <h1><span class="text-denger">$5</span></h1>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row menu_items my-4 py-3">
+          <div class="col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col-md-4">
+                <img
+                  src="https://preview.colorlib.com/theme/burger/img/burger/x5.png.pagespeed.ic.hr5zm177-0.webp"
+                  alt=""
+                  class="menu-img"
+                />
+              </div>
+              <div class="col-md-8">
+                <h1>Beefy Burgers</h1>
+                <p>
+                  Great way to make your business appear trust and relevant.
+                </p>
+                <h1><span class="text-denger">$5</span></h1>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="row d-flex align-items-center">
+              <div class="col-md-4">
+                <img
+                  src="https://preview.colorlib.com/theme/burger/img/burger/x6.png.pagespeed.ic.kQjjCF960I.webp"
+                  alt=""
+                  class="menu-img"
+                />
+              </div>
+              <div class="col-md-8">
+                <h1>Beefy Burgers</h1>
+                <p>
+                  Great way to make your business appear trust and relevant.
+                </p>
+                <h1><span class="text-denger">$5</span></h1>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <button class="w-100 py-4 my-5 btn btn-outline-danger rounded-pill">
+            More Items
+          </button>
+        </div>
+      </div>
     </div>
 
     <div class="row items m-0 text-white my-5">
       <div class="col-md-6 item1 d-flex flex-column justify-content-center align-items-start px-5">
         <h1 class="text-danger">$20</h1>
         <h3 class="text-white">The Burger President</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, libero.</p>
-        <button class="badge bg-warning rounded-pill border-0 py-3 px-5">Order Now</button>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, libero.
+        </p>
+        <button class="badge bg-warning rounded-pill border-0 py-3 px-5">
+          Order Now
+        </button>
       </div>
-      <div class="col-md-6 item2 d-flex flex-column justify-content-center align-items-start px-5">
+      <div
+        class="col-md-6 item2 d-flex flex-column justify-content-center align-items-start px-5"
+      >
         <h1 class="text-danger">$20</h1>
         <h3 class="text-white">The Burger President</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, libero.</p>
-        <button class="badge bg-warning rounded-pill border-0 py-3 px-5">Order Now</button>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui, libero.
+        </p>
+        <button class="badge bg-warning rounded-pill border-0 py-3 px-5">
+          Order Now
+        </button>
       </div>
     </div>
 
     <div class="container my-5 py-5">
       <div class="row">
         <div class="col-md-6 p-3">
-          <img src="https://preview.colorlib.com/theme/burger/img/about/x1.png.pagespeed.ic.Ow3mxmlpZe.webp" alt="" class="w-100">
+          <img
+            src="https://preview.colorlib.com/theme/burger/img/about/x1.png.pagespeed.ic.Ow3mxmlpZe.webp"
+            alt=""
+            class="w-100"
+          />
         </div>
         <div class="col-md-6 d-flex flex-column justify-content-center align-items-start p-5">
-          <h1 class="text-warning mb-4">About Us</h1>
-          <h1>BEST BURGER IN YOUR CITY</h1>
-          <p class="text-justify mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iure aliquid molestiae? Quaerat, aut laudantium odio voluptatibus dolorem quis quod placeat esse est ut. Minus ex pariatur deleniti odio facere aperiam est voluptate placeat aut quis sed hic temporibus ut nisi consequatur nulla nihil dolor magnam saepe sequi amet, dolorem impedit inventore? Quos ab, delectus atque a laborum sequi soluta facere expedita libero! Voluptas totam laudantium tempora velit, facilis quae provident vel exercitationem dolores voluptates sint rem, at sequi sed dolore temporibus obcaecati. Voluptas suscipit error laudantium, debitis explicabo at sequi reprehenderit quam! Consectetur, illo perferendis aliquid cumque molestias molestiae vel harum vero odit perspiciatis consequatur repellendus soluta, voluptates repudiandae aperiam corrupti quisquam dicta ad corporis at commodi quae aliquam.</p>
+          <h1 class="top_heading mb-4">About Us</h1>
+          <h1 class="b_heading">BEST BURGER IN YOUR CITY</h1>
+          <p class="text-justify mt-4">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit iure
+            aliquid molestiae? Quaerat, aut laudantium odio voluptatibus dolorem
+            quis quod placeat esse est ut. Minus ex pariatur deleniti odio
+            facere aperiam est voluptate placeat aut quis sed hic temporibus ut
+            nisi consequatur nulla nihil dolor magnam saepe sequi amet, dolorem
+            impedit inventore? Quos ab, delectus atque a laborum sequi soluta
+            facere expedita libero! Voluptas totam laudantium tempora velit,
+            facilis quae provident vel exercitationem dolores voluptates sint
+            rem, at sequi sed dolore temporibus obcaecati. Voluptas suscipit
+            error laudantium, debitis explicabo at sequi reprehenderit quam!
+            Consectetur, illo perferendis aliquid cumque molestias molestiae vel
+            harum vero odit perspiciatis consequatur repellendus soluta,
+            voluptates repudiandae aperiam corrupti quisquam dicta ad corporis
+            at commodi quae aliquam.
+          </p>
         </div>
       </div>
     </div>
 
-    <div class="row m-0 video">
-      <div class="col-md-12 d-flex flex-column justify-content-center align-items-center">
+    <div class="row mx-0 my-5 video">
+      <div
+        class="col-md-12 d-flex flex-column justify-content-center align-items-center"
+      >
         <h1 class="text-white font">BURGER</h1>
         <h1 class="text-white font">BACHELOR</h1>
         <h3 class="text-white">How we make delicious Burger</h3>
-        <i class="fa-brands fa-circle-play mx-3 text-white font my-5"></i>
+        <i class="mx-3 text-white font my-5"></i>
       </div>
     </div>
 
-    <script
-      src="https://kit.fontawesome.com/2b9cdc1c9a.js"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-      crossorigin="anonymous"
-    ></script>
+    <div class="container my-5">
+      <div class="row m-0">
+        <div class="col-md-12 d-flex flex-column align-items-center py-5">
+          <h4 class="top_heading">Testimonials</h4>
+          <h1 class="b_heading">HAPPY CUSTOMERS</h1>
+        </div>
+        <div class="col-md-12">
+          <div class="row m-0">
+            <div class="col-md-2"></div>
+            <div class="col-md-8 d-flex flex-column align-items-center">
+              <p class="text-center mb-5">
+                “Donec imperdiet congue orci consequat mattis. Donec rutrum
+                porttitor sollicitudin. Pellentesque id dolor tempor sapien
+                feugiat ultrices necsed neque.
+              </p>
+              <h1>HAPPY CUSTOMERS</h1>
+            </div>
+            <div class="col-md-2"></div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://kit.fontawesome.com/2b9cdc1c9a.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   </body>
 </html>
